# plan

./: .gitignore  Cargo.toml  README.md  flake.nix  plan.1
.config/: nextest.toml
.github/workflows/: release.yml  test.yml
nvim/lua/plan/: init.lua
nvim/plugin/: plan.lua
src/: bin.rs  config.rs  date.rs  file.rs  lib.rs
tests/: cli.rs  concurrent.rs  fuzz.rs  prop.rs
tests/data/: ambiguous_date_args.txtar  basic_workflow.txtar  cli_contract.txtar  edge_cases.txtar  editor_parsing.txtar  ignore_config.txtar  ignored_files_no_warn.txtar  inbox_regeneration.txtar  last_session.txtar  mutually_exclusive_args.txtar  natural_language_dates.txtar  out_of_range_date.txtar  time_forwarding.txtar  unexpected_files_warn.txtar  warn_disabled_config.txtar
tests/txtar/: mod.rs
