[package]
name = "plan"
version = "0.1.0-alpha.1"
edition = "2024"

[features]
test-clock = []

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.43"
clap = { version = "4.5.60", features = ["derive"] }
fs4 = "0.13.1"
shlex = "1.3.0"

[lib]
name = "plan"
path = "src/lib.rs"

[[bin]]
name = "plan"
path = "src/bin.rs"

[dev-dependencies]
assert_cmd = "2.1.2"
proptest = "1.10.0"
rand = "0.10.0"
tempfile = "3.25.0"
